--- a/tools/productivity/notepad.html
+++ b/tools/productivity/notepad.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notepad | Ultimatrix</title>
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
   <meta name="description"
     content="Free online notepad to write, save, and edit notes with word and character count. Switch to journal mode for a paper-like writing experience. Secure, fast, and private." />
   <style>
@@ -171,11 +171,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
 
   <div class="notepad-container" id="notepadContainer">
     <div class="intro">
@@ -300,11 +296,7 @@
   </script>
 
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
