--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
   <title>About Us | Ultimatrix</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/blogs.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
 </head>
 
 <body>
