--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/blogs.css" />
     <link rel="stylesheet" href="/css/contact-us.css" />
-    <script src="/js/script.js"></script>
+    <script src="/js/script.js" defer></script>
 </head>
 
 <body>
