--- a/games/minesweeper.html
+++ b/games/minesweeper.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minesweeper | Ultimatrix</title>
   <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js" defer></script>
   <style>
     body {
       margin: 0;
@@ -126,11 +127,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="game-wrapper">
     <div class="game-container">
       <div class="title">Minesweeper</div>
@@ -310,11 +307,7 @@
     startGame();
   </script>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
