--- a/games/snake.html
+++ b/games/snake.html
@@ -7,14 +7,11 @@
   <meta name="description" content="Play the classic Snake game online. Grow the snake, avoid collisions, and beat your high score. Fully secure, AdSense-friendly, and stylish.">
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/games/snakes.css" />
+  <script src="/js/script.js" defer></script>
 </head>
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="game-wrapper">
     <div class="game-container">
       <canvas id="game" width="600" height="600"></canvas>
@@ -153,10 +150,6 @@
     restartGame();
   </script>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 </html>
