--- a/games/sudoku.html
+++ b/games/sudoku.html
@@ -7,6 +7,7 @@
   <title>Sudoku Game</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js" defer></script>
   <style>
     body {
       margin: 0;
@@ -137,11 +138,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="game-wrapper">
     <div class="side-buttons">
     </div>
@@ -363,11 +360,7 @@
     loadBestTime();
   </script>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
