--- a/games/whack-a-mole.html
+++ b/games/whack-a-mole.html
@@ -7,6 +7,7 @@
   <title>Whack a Mole</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css" />
+  <script src="/js/script.js" defer></script>
   <style>
     body {
       margin: 0;
@@ -79,11 +80,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="game-wrapper">
     <div class="game-box">
       <div class="title">Whack a Mole</div>
@@ -162,11 +159,7 @@
     </div>
   </div>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
