--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
     <title>Privacy Policy | Ultimatrix</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/blogs.css" />
-    <script src="/js/script.js"></script>
+    <script src="/js/script.js" defer></script>
 </head>
 
 <body>
