--- a/tools/calculators/age-calculator.html
+++ b/tools/calculators/age-calculator.html
@@ -9,7 +9,7 @@
     content="Free online age calculator that helps you find your exact age in years, months, and days from your date of birth. Simple and fast." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
   <style>
     body {
       margin: 0;
@@ -106,11 +106,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="tool-container">
     <div class="side-buttons">
 
@@ -219,11 +215,7 @@
     daySelect.addEventListener("change", calculateAge);
   </script>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
