--- a/tools/calculators/word-counter.html
+++ b/tools/calculators/word-counter.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="Free online word counter tool that helps you count words, characters, and spaces in real-time. Perfect for writers, students, and social media posts.">
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -115,11 +115,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="tool-container">
     <div class="side-buttons">
     </div>
@@ -168,11 +164,7 @@
     });
   </script>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
