--- a/tools/creativity/forlater-countdown.html
+++ b/tools/creativity/forlater-countdown.html
@@ -9,7 +9,7 @@
     content="Create a countdown timer to any future date and time. Perfect for events, launches, holidays, and goals!" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
   <style>
     body {
       margin: 0;
@@ -137,11 +137,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="side-buttons">
   </div>
 
@@ -224,11 +220,7 @@
     [eventName, targetDate, targetTime].forEach(el => el.addEventListener("input", updateCountdown));
   </script>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
