--- a/tools/dateAndTime/date-adder.html
+++ b/tools/dateAndTime/date-adder.html
@@ -9,7 +9,7 @@
     content="Add or subtract days, hours, and minutes from a selected date and time. Get the exact future or past datetime instantly." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
   <style>
     body {
       margin: 0;
@@ -138,11 +138,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="tool-container">
     <div class="tool-box">
       <div class="title">Add or Subtract Date & Time</div>
@@ -240,11 +236,7 @@
     calculateNewDateTime();
   </script>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
