--- a/tools/dateAndTime/date-duration.html
+++ b/tools/dateAndTime/date-duration.html
@@ -9,7 +9,7 @@
     content="Calculate how many days, weeks, or years are between two dates. Simple and accurate date duration calculator with instant results." />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
   <style>
     body {
       margin: 0;
@@ -123,11 +123,7 @@
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
+
   <div class="tool-container">
     <div class="tool-box">
       <div class="title">Date Duration Calculator</div>
@@ -232,11 +228,7 @@
     calculateDuration();
   </script>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+
 </body>
 
 </html>
