02Aug25|News Page|Dynamic news page creation from json

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Ultimatrix</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/header-footer.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
 </head>
 
 <body>
