08Aug25|Amazon Page|

--- a/blogs/amazon/amaz.html
+++ b/blogs/amazon/amaz.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Amazon Picks | Blogs</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/blogs.css" />
+  <link rel="stylesheet" href="/css/gta5.css" />
+  <link rel="stylesheet" href="/css/amazon.css" />
   <script src="/js/script.js" defer></script>
+  <style>
+
+  </style>
+
 </head>
+
 <body>
   <div id="header"></div>
 
@@ -17,9 +25,9 @@
       <p>Discover handpicked Amazon favorites, curated for value, joy, and everyday ease.</p>
       <nav class="blogs-main-category-menu">
         <ul>
-          <li><a id = "new" href="#" class="howto-tab-btn active" data-tab="new">New & Worthy</a></li>
-          <li><a id = "eco" href="#" class="howto-tab-btn" data-tab="eco">Eco-Friendly</a></li>
-          <li><a id = "gadgets" href="#" class="howto-tab-btn" data-tab="gadgets">Gadgets</a></li>
+          <li><a id="new" href="#" class="howto-tab-btn active" data-tab="new">New & Worthy</a></li>
+          <li><a id="eco" href="#" class="howto-tab-btn" data-tab="eco">Eco-Friendly</a></li>
+          <li><a id="gadgets" href="#" class="howto-tab-btn" data-tab="gadgets">Gadgets</a></li>
         </ul>
       </nav>
     </section>
@@ -27,68 +35,130 @@
       <div id="howto-tabs">
         <div id="tab-new" class="howto-tab-content" style="display:block;">
           <p class="blogs-amazon-subheading">New & Worthy</p>
-          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
-            <div class="howto-card color1">
-              <a href="https://amzn.to/41209bo" target="_blank">
-                <h4>Eco-Friendly Water Bottle</h4>
-                <p>Stay hydrated and reduce plastic waste with this reusable, BPA-free water bottle.(Affiliate Link)</p>
-              </a>
-            </div>
-            <div class="howto-card color2">
-              <a href="https://amzn.to/4kHMIo9" target="_blank">
-                <h4>Organic Cotton Tote Bag</h4>
-                <p>A stylish and sustainable alternative to plastic bags. Great for shopping, work, or a day out.(Affiliate Link)</p>
-              </a>
+          <div class="flex-wrap-start">
+            <div class="gta5-card color1" style="color: #1b5e20;">
+              <h1>🌱 Recommended Gardening Tools</h1>
+              <ul class="amazon-list">
+                <li><a href="https://www.amazon.in/dp/B08YDSPGGY?ref=ppx_yo2ov_dt_b_fed_asin_title&th=1"
+                    target="_blank">D&V ENGINEERING - Creative in innovation Metal Pot Stand, Flower plant stand for
+                    balcony, Black, 73.5 cm Wide - Set of 4</a></li>
+                <li><a href="https://www.amazon.in/dp/B0CXS74MYN?ref=ppx_yo2ov_dt_b_fed_asin_title&th=1"
+                    target="_blank">PAmazon Brand - Solimo Metal Flower Pot Stand (Black, Set of 8, Round) | Gamla Stand
+                    for Home | Plant Stand for Balcony | Premium Flower Pot Stand | Plant Stand for Living Room</a></li>
+                <li><a
+                    href="https://www.amazon.in/Gardening-Tools-Item-Garden-Tool/dp/B0CBPBRPDD/ref=sr_1_1_sspa?crid=VTUTAYTS2K27&dib=eyJ2IjoiMSJ9.P_BKfIvJHdfYPaLyhOzDz-_zaZ1zQoXLZSTrtaoAFNQLbXYJBLmTWZCMR8WyRBwG4CmLVPJWGVHo7CmYPAVBln6qHVnQ38LAI7x1jrRaQTWTswGTlvt2gbrmVQVbm3UVCAmlPYm3lfhLsQPm5x492_HUIpO0bar64zmCekJlg78eF57cK8Lt7nWmiPTffhW8vfGP-ljGgZ3HC0SwAltrHviwZlgNI6rSzsrJjoKPMO9141-B78hmydLuPgs-bPaTbpV1-UNkyt6P6Vnhm184kA4ASqZAAsGqWglawCb4NyE.O7fbBwQHr9wtrOsxXW10R3C8Oq5kvCsWU60Pok5ZsqE&dib_tag=se&keywords=gardening+tools+kit+for+home+garden&qid=1754600065&s=garden&sprefix=gardening+t%2Clawngarden%2C276&sr=1-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1"
+                    target="_blank">AGT Gardening Tools kit 9 Item Garden Tool Kit (9 Tools)</a></li>
+                <li><a
+                    href="https://www.amazon.in/Amazon-Brand-8-Piece-Gardening-Cultivator/dp/B0D673FG7H/ref=sr_1_4?crid=VTUTAYTS2K27&dib=eyJ2IjoiMSJ9.P_BKfIvJHdfYPaLyhOzDz-_zaZ1zQoXLZSTrtaoAFNQLbXYJBLmTWZCMR8WyRBwG4CmLVPJWGVHo7CmYPAVBln6qHVnQ38LAI7x1jrRaQTWTswGTlvt2gbrmVQVbm3UVCAmlPYm3lfhLsQPm5x492_HUIpO0bar64zmCekJlg78eF57cK8Lt7nWmiPTffhW8vfGP-ljGgZ3HC0SwAltrHviwZlgNI6rSzsrJjoKPMO9141-B78hmydLuPgs-bPaTbpV1-UNkyt6P6Vnhm184kA4ASqZAAsGqWglawCb4NyE.O7fbBwQHr9wtrOsxXW10R3C8Oq5kvCsWU60Pok5ZsqE&dib_tag=se&keywords=gardening%2Btools%2Bkit%2Bfor%2Bhome%2Bgarden&qid=1754600065&s=garden&sprefix=gardening%2Bt%2Clawngarden%2C276&sr=1-4&th=1"
+                    target="_blank">Amazon Brand - Solimo 8-Piece Gardening Tool Kit | Cultivator, Fork, Trowels,
+                    Weeder, Garden Gloves, Pruner Cutter, and Scissor | Gardening Tools Set for Home Gardens</a></li>
+                <li><a href="https://amzn.in/d/cYxSoJK" target="_blank">Ugaoo Organic Vermicompost Fertilizer Manure For
+                    Plants - 5 Kg</a></li>
+                <li><a href="https://amzn.in/d/ew6Fszt" target="_blank">TrustBasket Neem Khali/Neem Cake Powder - 450gm
+                    - Extracted Through Cold Press Technology - Higher Azadirachtin & Neem Oil Content - Organic
+                    Fertilizer and Pest Repellent for Plants</a></li>
+              </ul>
             </div>
           </div>
-        </div>
-        <div id="tab-eco" class="howto-tab-content" style="display:none;">
-          <p class="howto-tab-title blogs-amazon-subheading">Eco-Friendly</p>
-          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
-            <div class="howto-card color3">
-              <a href="https://amzn.to/3TP12QW" target="_blank">
-                <h4>Solar Power Bank</h4>
-                <p>Charge your devices on the go with clean solar energy. Ideal for outdoor adventures and emergencies.(Affiliate Link)</p>
-              </a>
+          <div class="flex-wrap-start">
+            <div class="gta5-card color1" style="color: #d35400">
+              <h1>🍽️ Must-Have Kitchen Essentials</h1>
+              <ul class="amazon-list">
+                <li><a href="https://amzn.in/d/dL1L25w" target="_blank">Tupperware New Smart Saver Plastic Container
+                    Set, 2.3 Litres, Set of 4, Transparent</a></li>
+                <li><a href="https://amzn.in/d/21qqfGH" target="_blank">Tupperware New Smart Saver Plastic Container
+                    Set, 1.7 litres, Set of 4, Transparent</a></li>
+                <li><a href="https://amzn.in/d/5uPQaV1" target="_blank">Tupperware Mm Round 2 Containers- 440 Ml
+                    Capacity- Set Of 8 Pc- Red Seal(Plastic), Blue-Green</a></li>
+                <li><a href="https://amzn.in/d/5208Ap0" target="_blank">Signoraware Modular BPA Free Plastic Square
+                    Container | Dishwasher safe | Airtight & Leakproof | Kitchen & Pantry Storage | Ideal for Atta, Rice
+                    & Sugar Storage | Multipurpose ( ModBlue | 6.5 Ltr )</a></li>
+                <li><a href="https://amzn.in/d/dXHrZKa" target="_blank">KASHIVAL Kitchen Self Adhesive Oil Proof Sticker
+                    Waterproof Contact Paper Foil Sticker Kitchen Wallpaper Removable Heat Resistant (Size : 60 * 200
+                    cm) (Blue Marble A31)</a></li>
+              </ul>
             </div>
           </div>
-        </div>
-        <div id="tab-gadgets" class="howto-tab-content" style="display:none;">
-          <p class="howto-tab-title blogs-amazon-subheading">Gadgets</p>
-          <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
-            <div class="howto-card color4">
-              <a href="https://amzn.to/3GMntTW" target="_blank">
-                <h4>Smart Home Plug</h4>
-                <p>Control your devices remotely and save energy with this Wi-Fi smart plug.(Affiliate Link)</p>
-              </a>
+          <div class="flex-wrap-start">
+            <div class="gta5-card color1" style="color: #6e2c00">
+              <h1>🛏️ Home & Furnishing Must-Haves</h1>
+              <ul class="amazon-list">
+                <li><a href="https://amzn.in/d/0cz1xHq" target="_blank">Linenovation 1000GSM Hollow Fibre Mattress
+                    Padding/Topper White for Queen Bed-60 Inch X 78 Inch</a></li>
+                <li><a href="https://amzn.in/d/iLthdIc" target="_blank">Cotton Thick Bench Cushion Chair Pad - Cushion
+                    Lightweight Table Stool Back Seat Cushion Yoga Chair Pad Cotton Cushion 3-Seater Bench Cushion, 150
+                    X 50 X 8 Cm (Grey)</a></li>
+                <li><a href="https://amzn.in/d/fZ5F6YK" target="_blank">LA VERNE Virgin Microfibre Blown Technology
+                    Filled Quilted Anti Bacterial Cloth Sleeping Pillow Pack of 2 (27X16 Inch) (Off White)</a></li>
+                <li><a href="https://amzn.in/d/f01v7sW" target="_blank">Yellow Weaves Velvet 5 Seater Quilted Sofa Cover
+                    and Chair Cover, Seat & Back Cover, Color - Light Grey</a></li>
+                <li><a href="https://amzn.in/d/65rVz7C" target="_blank">Swayam Diwan Set Cotton 6 Piece Diwan Printed
+                    Bedsheet Set for Living Room Hall (Set of 6 Piece, 1 Diwan Sheet | 2-Bolster Cover | 3 Cushion
+                    Covers) Soft Feel,Light Grey White</a></li>
+                <li><a href="https://amzn.in/d/gpaXlHh" target="_blank">Haus & Kinder Bedsheet,100% Cotton Double Bed
+                    Bed Sheet, 186 TC Pure Cotton Bedsheet for Queen Size Bed, Cotton Double Bedsheets with 2 Pillow
+                    Covers,White Grid</a></li>
+                <li><a href="https://amzn.in/d/cQBeIOx" target="_blank">BSB HOME Pencil Pattern Flannel Fleece Sherpa
+                    Blanket 220 X 150 Cm, Soft, Plush, Fluffy Season/Ac and Mild Winter Reversible Blanket - Single Bed
+                    (Colour- Aqua, Weight - 1.6 Kg), 300 TC</a></li>
+                <li><a href="https://amzn.in/d/ht9edzT" target="_blank">HOMEMONDE Premium Plush Solid Summer Single Bed
+                    Dohar/AC Blanket | 220 GSM Reversible Lightweight Cozy Soft for Bed, Sofa, Couch, Travel & Camping |
+                    140x229 Cm - Pink</a></li>
+              </ul>
+
+              </ul>
             </div>
           </div>
         </div>
       </div>
+      <div id="tab-eco" class="howto-tab-content" style="display:none;">
+        <p class="howto-tab-title blogs-amazon-subheading">Eco-Friendly</p>
+        <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+          <div class="howto-card color3">
+            <a href="https://amzn.to/3TP12QW" target="_blank">
+              <h4>Solar Power Bank</h4>
+              <p>Charge your devices on the go with clean solar energy. Ideal for outdoor adventures and
+                emergencies.(Affiliate Link)</p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div id="tab-gadgets" class="howto-tab-content" style="display:none;">
+        <p class="howto-tab-title blogs-amazon-subheading">Gadgets</p>
+        <div style="margin-top:0.5em; display: flex; flex-wrap: wrap; gap: 1em; justify-content: flex-start;">
+          <div class="howto-card color4">
+            <a href="https://amzn.to/3GMntTW" target="_blank">
+              <h4>Smart Home Plug</h4>
+              <p>Control your devices remotely and save energy with this Wi-Fi smart plug.(Affiliate Link)</p>
+            </a>
+          </div>
+        </div>
+      </div>
+      </div>
       <p class="blogs-amazon-subheading">Want to see more blogs?</p>
-<div class="blogs-btn-wrapper">
-  <a class="btn" href="/blogs/blogs.html">← Go to Blogs</a>
-</div>
-    <!-- <button onclick="window.location.href='/blogs/blogs.html'" class="btn">← Go Back</button> -->
-</section>
+      <div class="blogs-btn-wrapper">
+        <a class="btn" href="/blogs/blogs.html">← Go to Blogs</a>
+      </div>
+      <!-- <button onclick="window.location.href='/blogs/blogs.html'" class="btn">← Go Back</button> -->
+    </section>
   </main>
-</main>
   <div id="footer"></div>
 
 </body>
 <script>
-// Tab switching logic for Amazon Picks section
-document.querySelectorAll('.howto-tab-btn').forEach(function(btn) {
-  btn.addEventListener('click', function(e) {
-    e.preventDefault();
-    document.querySelectorAll('.howto-tab-btn').forEach(function(b) { b.classList.remove('active'); });
-    btn.classList.add('active');
-    var tab = btn.getAttribute('data-tab');
-    document.querySelectorAll('.howto-tab-content').forEach(function(tc) {
-      tc.style.display = 'none';
+  // Tab switching logic for Amazon Picks section
+  document.querySelectorAll('.howto-tab-btn').forEach(function (btn) {
+    btn.addEventListener('click', function (e) {
+      e.preventDefault();
+      document.querySelectorAll('.howto-tab-btn').forEach(function (b) { b.classList.remove('active'); });
+      btn.classList.add('active');
+      var tab = btn.getAttribute('data-tab');
+      document.querySelectorAll('.howto-tab-content').forEach(function (tc) {
+        tc.style.display = 'none';
+      });
+      document.getElementById('tab-' + tab).style.display = 'block';
     });
-    document.getElementById('tab-' + tab).style.display = 'block';
   });
-});
 </script>
+
 </html>
