--- a/gta5.html
+++ b/gta5.html
@@ -20,10 +20,10 @@
                 of Los Santos! 🎮</p>
             <nav class="blogs-main-category-menu">
                 <ul>
-                    <li><a href="#" class="howto-tab-btn active" data-tab="videos">Videos</a></li>
-                    <li><a href="#" class="howto-tab-btn" data-tab="shorts">Shorts</a></li>
-                    <li><a href="#" class="howto-tab-btn" data-tab="playlists">Playlists</a></li>
-                    <li><a href="#" class="howto-tab-btn" data-tab="tricks">Tricks</a></li>
+                    <li><a id="videos" href="#" class="howto-tab-btn" data-tab="videos">Videos</a></li>
+                    <li><a id="shorts" href="#" class="howto-tab-btn active" data-tab="shorts">Shorts</a></li>
+                    <li><a id="playlists" href="#" class="howto-tab-btn" data-tab="playlists">Playlists</a></li>
+                    <li><a id="tricks" href="#" class="howto-tab-btn" data-tab="tricks">Tricks</a></li>
                     <!-- <li><a href="#" class="howto-tab-btn" data-tab="creativity">Creativity</a></li> -->
                 </ul>
             </nav>
@@ -42,7 +42,7 @@
         <section>
             <div id="howto-tabs">
                 <div id="tab-videos" class="howto-tab-content" style="display:none;">
-                    <p class="howto-tab-title blogs-amazon-subheading">New videos every day</p>
+                    <p class="blogs-amazon-subheading">New videos every day</p>
                     <div class="flex-wrap-start">
                         <div class="gta5-card color1">
                             <a href=#>
@@ -92,6 +92,9 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- </div> -->
+                <!-- <div id="howto-tabs"> -->
                 <div id="tab-shorts" class="howto-tab-content" style="display:none;">
                     <p class="howto-tab-title blogs-amazon-subheading">Enjoy high-action gameplay with no filter</p>
                     <div class="flex-wrap-start">
@@ -101,8 +104,8 @@
                                     title="YouTube video player" frameborder="10"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                                
-                               <!-- <video class="gta5-video" controls src="assets/img/roadrage.mp4"></video>-->
+
+                                <!-- <video class="gta5-video" controls src="assets/img/roadrage.mp4"></video>-->
                                 <h4>(Story Part 33) GTA 5: Did Somebody Say Yoga? – Michael Loses His Mind at Yoga
                                     Class!</h4>
                                 <p>Michael’s life just keeps spiraling… In this hilarious GTA 5 mission, Michael
@@ -160,13 +163,19 @@
                             </a>
                         </div>
                     </div>
+                    <!-- </div> -->
                 </div>
+                <!-- <div id="howto-tabs"> -->
                 <div id="tab-playlists" class="howto-tab-content">
                     <p class="blogs-amazon-subheading">Watch story missions unfold</p>
                     <div class="flex-wrap-start">
                         <div class="gta5-card color1">
                             <a href=#>
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=5MNxgwjKrjjCwie4&amp;list=PLZyNXY-gE66TfkwYQl_tbccXUJbfhA75k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="560" height="315"
+                                    src="https://www.youtube.com/embed/videoseries?si=5MNxgwjKrjjCwie4&amp;list=PLZyNXY-gE66TfkwYQl_tbccXUJbfhA75k"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>GTA 5 Full Story Mode Walkthrough </h4>
                                 <p>Welcome to my GTA 5 Full Story Mode Walkthrough on Xbox Series X! This complete
@@ -188,7 +197,8 @@
                                     GTA 5 Xbox Series X full playthrough
                                     GTA 5 funny moments & fails
                                     ...then you're in the right place!
-                                    🎮 New episodes uploaded regularly — Subscribe and follow along as we conquer Los
+                                    🎮 New episodes uploaded regularly — Subscribe and follow along as we conquer
+                                    Los
                                     Santos one mission at a time.
 
                                     #GTA5 #GTAVWalkthrough #GTA5StoryMode #GTA5AllMissions #GTAVGameplay
@@ -197,14 +207,23 @@
                         </div>
                         <div class="gta5-card color2">
                             <a href="#">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=9h2U0pVgEtPeKkSt&amp;list=PLZyNXY-gE66QGkk3X86eQeveO5RAGlZ0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="560" height="315"
+                                    src="https://www.youtube.com/embed/videoseries?si=9h2U0pVgEtPeKkSt&amp;list=PLZyNXY-gE66QGkk3X86eQeveO5RAGlZ0g"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>GTA 5 Secrets, Stunts & Chaos 🔥 | Shorts Collection</h4>
-                                <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA 5's
-                                    hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals, and
-                                    all the mad moments you can't miss.🎯 Whether you're looking for new tricks, secret
-                                    locations, or just some pure chaos, this is the ultimate GTA 5 Shorts binge list.
-                                    Updated regularly — stay tuned!🔎 Includes:Secret locations & map easter eggsPlane
+                                <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA
+                                    5's
+                                    hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals,
+                                    and
+                                    all the mad moments you can't miss.🎯 Whether you're looking for new tricks,
+                                    secret
+                                    locations, or just some pure chaos, this is the ultimate GTA 5 Shorts binge
+                                    list.
+                                    Updated regularly — stay tuned!🔎 Includes:Secret locations & map easter
+                                    eggsPlane
                                     steals & skydiving failsCrazy car chases & jumpsGlitches, tricks, and hidden
                                     pathsFunny & chaotic GTA moments👀 Watch, laugh, and learn something new every
                                     time.💥 Subscribe and never miss the madness!</p>
@@ -212,14 +231,23 @@
                         </div>
                         <div class="gta5-card color3">
                             <a href="#">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=WNH7yLOMRM2zjur1&amp;list=PLZyNXY-gE66SYsF-UNpvzVw8tes3_W-2K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="560" height="315"
+                                    src="https://www.youtube.com/embed/videoseries?si=WNH7yLOMRM2zjur1&amp;list=PLZyNXY-gE66SYsF-UNpvzVw8tes3_W-2K"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>GTA 5 Plays</h4>
-                                <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA 5's
-                                    hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals, and
-                                    all the mad moments you can't miss.🎯 Whether you're looking for new tricks, secret
-                                    locations, or just some pure chaos, this is the ultimate GTA 5 Shorts binge list.
-                                    Updated regularly — stay tuned!🔎 Includes:Secret locations & map easter eggsPlane
+                                <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA
+                                    5's
+                                    hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals,
+                                    and
+                                    all the mad moments you can't miss.🎯 Whether you're looking for new tricks,
+                                    secret
+                                    locations, or just some pure chaos, this is the ultimate GTA 5 Shorts binge
+                                    list.
+                                    Updated regularly — stay tuned!🔎 Includes:Secret locations & map easter
+                                    eggsPlane
                                     steals & skydiving failsCrazy car chases & jumpsGlitches, tricks, and hidden
                                     pathsFunny & chaotic GTA moments👀 Watch, laugh, and learn something new every
                                     time.💥 Subscribe and never miss the madness!</p>
@@ -227,8 +255,11 @@
                         </div>
                     </div>
                 </div>
+                <!-- </div> -->
+                <!-- <div id="howto-tabs"> -->
                 <div id="tab-tricks" class="howto-tab-content" style="display:none;">
-                    <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and troubleshooting
+                    <p class="howto-tab-title blogs-amazon-subheading">Hardware guides, setup tips, and
+                        troubleshooting
                         help.</p>
                     <div class="flex-wrap-start">
                         <div class="gta5-card color1">
@@ -237,7 +268,8 @@
                                 <h4>(Story Part 33) GTA 5: Did Somebody Say Yoga? – Michael Loses His Mind at Yoga
                                     Class!</h4>
                                 <p>Michael’s life just keeps spiraling… In this hilarious GTA 5 mission, Michael
-                                    reluctantly joins his wife Amanda and her “spiritual” instructor Fabien for a yoga
+                                    reluctantly joins his wife Amanda and her “spiritual” instructor Fabien for a
+                                    yoga
                                     session. But things don’t go as planned – unless the plan was Michael snapping
                                     mid-pose and storming off to find his daughter at a party boat!</p>
                             </a>
@@ -248,17 +280,21 @@
                                 <h4>(Story Part 32) GTA 5: Three's Company – Michael First Heist with Trevor and
                                     Franklin 🔥💣</h4>
                                 <p>Things are heating up in Los Santos! In this epic mission, Michael, Franklin, and
-                                    Trevor team up for the first time ever to rescue an FIB target from the IAA building
+                                    Trevor team up for the first time ever to rescue an FIB target from the IAA
+                                    building
                                     – and it’s absolute chaos!</p>
                             </a>
                         </div>
                         <div class="gta5-card color3">
                             <a href="#">
                                 <video class="gta5-video" controls src="videos/startup-insights.mp4"></video>
-                                <h4>(Story Part 30) GTA 5: Fame or Shame – Trevor Reunites with Michael & Chases Lazlow!
+                                <h4>(Story Part 30) GTA 5: Fame or Shame – Trevor Reunites with Michael & Chases
+                                    Lazlow!
                                     🎤🚛</h4>
-                                <p>After a long buildup, Trevor and Michael finally come face to face in one of GTA 5’s
-                                    most iconic moments! And just when things get heated, Amanda calls — their daughter
+                                <p>After a long buildup, Trevor and Michael finally come face to face in one of GTA
+                                    5’s
+                                    most iconic moments! And just when things get heated, Amanda calls — their
+                                    daughter
                                     Tracey is humiliating herself on Fame or Shame with Lazlow.</p>
                             </a>
                         </div>
